# context-bar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.tr.md  SECURITY.md  SUPPORT.md  extension.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  configuration_help.yml
.github/workflows/: publish.yml  release.yml
Casks/: context-bar.rb  context-hud.rb
crates/context-bar-core/: Cargo.toml
crates/context-bar-core/examples/: collect_dump.rs
crates/context-bar-core/src/: agent_context.rs  aggregate.rs  claude_statusline.rs  collect.rs  context_engine.rs  detail_html.rs  git_signal.rs  hud.rs  i18n.rs  lib.rs  live.rs  online.rs  others.rs  pricing.rs  report.rs  state_writer.rs  time_windows.rs  usage_signal.py  usage_signal.rs
crates/context-bar-core/tests/: aggregate_golden.rs  collect_smoke.rs  others_smoke.rs  pricing_golden.rs
crates/context-bar-core/tests/fixtures/: aggregate_golden.json  pricing_golden.json
docs/: 01-research.md  02-architecture.md  03-implementation-prompt.md  PUBLISHING.md  RELEASING.md
docs/ai/: AGENT_GUIDE.md  COST_MODEL.md  KICKOFF.md  ROADMAP.md
docs/releases/: v0.1.0.md  v0.1.2.md  v0.1.3.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.3.14.md  v0.3.23.md  v0.3.24.md  v0.3.25.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
examples/: snapshot.rs
menubar/: context-hud.swift  context-pilot-bar.swift  zed-context-bar.swift
menubar/sources/: AIAdvisor.swift  AboutViews.swift  AppDelegate.swift  CommonViews.swift  ContextSnapshot.swift  CostViewController.swift  DesignTokens.swift  DetailWindow.swift  DisplayElement.swift  DisplayPicker.swift  DisplayPrefs.swift  Hud.swift  Localization.swift  MachineSync.swift  Models.swift  PopoverViewController.swift  PopoverViews.swift  PreferencePane.swift  SettingsPanes.swift  StatsViewController.swift  Theme.swift  ThemeCardView.swift  UpdateManager.swift  UsageViewController.swift
menubar/widget/: Widget.swift
npm/: cli.js
packaging/macos/: Context Pilot Bar-Info.plist  ContextBar-Info.plist  ContextHUD-Info.plist  Install Context Pilot Bar.txt  Install ContextBar.txt
packaging/macos/widget/: Info.plist
scripts/: build-menubar-app.sh  create-demo-video.sh  create-macos-dmg.sh  npm-publish.sh
src/: agent_context.rs  auto_refresh.rs  claude_statusline.rs  context_engine.rs  detail_html.rs  hud.rs  lib.rs  slash_commands.rs  state_writer.rs  usage_signal.py  usage_signal.rs
