[workspace]
members = ["crates/context-bar-core"]
resolver = "2"

[package]
name = "context-bar"
version = "0.6.1"
edition = "2024"
license = "Apache-2.0"
description = "Usage HUD + API-equivalent cost estimator for AI coding agents (Claude Code, Codex CLI). Native macOS menubar app, terminal CLI, and Zed extension."
repository = "https://github.com/htahaozlu/context-bar"
homepage = "https://github.com/htahaozlu/context-bar"
readme = "README.md"
keywords = ["claude", "codex", "usage", "cost", "tokens"]
categories = ["command-line-utilities", "development-tools"]
default-run = "context-bar"
# crates.io caps a published crate at 10 MiB. The repo also carries the native
# macOS app (Swift, multi-MB PNG/GIF/MP4 assets, docs) which the crate doesn't
# need to build — whitelist only the Rust sources + manifest/readme/license.
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]
# The CLI is one explicit [[bin]]; src/bin/cli_report.rs is a module of it,
# not its own binary. Disable auto-discovery so cargo doesn't treat it as one.
autobins = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
context-bar-core = { path = "crates/context-bar-core", version = "0.6.1" }
time = { version = "0.3", features = ["formatting", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zed_extension_api = "0.7.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1.0"
ctrlc = "3"
comfy-table = "7"
ratatui = "0.29"
crossterm = "0.29"

[[example]]
name = "snapshot"
path = "examples/snapshot.rs"

[[bin]]
name = "context-bar"
path = "src/bin/context-bar.rs"

# Profiles are only honored in the workspace-root manifest — keep them here.
[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
